replace NodeInfo with Broker. tests are not included.